--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-		  xmlns:tools="http://schemas.android.com/tools" package="com.vvechirko.slidepaneltest">
+		  xmlns:tools="http://schemas.android.com/tools"
+		  package="com.vvechirko.slidepaneltest">
 
 	<application
 			android:allowBackup="true"
@@ -11,15 +12,6 @@
 			android:theme="@style/AppTheme"
 			tools:ignore="AllowBackup,GoogleAppIndexingWarning">
 
-		<activity android:name=".TestActivity"
-				  android:theme="@style/AppTheme.NoActionBar">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN"/>
-
-				<category android:name="android.intent.category.LAUNCHER"/>
-			</intent-filter>
-		</activity>
-
 		<activity android:name=".MainActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
@@ -28,14 +20,19 @@
 			</intent-filter>
 		</activity>
 
-		<activity android:name=".graph.GraphActivity"
-				  android:theme="@android:style/Theme.Material.Light">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN"/>
+		<activity android:name=".sliding.SlidingActivity"/>
 
-				<category android:name="android.intent.category.LAUNCHER"/>
-			</intent-filter>
-		</activity>
+		<activity android:name=".SwipeLayoutActivity"/>
+
+		<activity android:name=".FitWindowTestActivity"
+				  android:theme="@style/AppTheme.NoActionBar"/>
+
+		<activity android:name=".appbar.AppBarActivity"
+				  android:theme="@style/AppTheme.NoActionBar"/>
+
+		<activity android:name=".graph.GraphActivity"
+				  android:theme="@android:style/Theme.Material.Light"/>
+
 	</application>
 
 </manifest>
