--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,38 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-		  xmlns:tools="http://schemas.android.com/tools"
-		  package="com.vvechirko.slidepaneltest">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.vvechirko.slidepaneltest">
 
-	<application
-			android:allowBackup="true"
-			android:icon="@mipmap/ic_launcher"
-			android:label="@string/app_name"
-			android:roundIcon="@mipmap/ic_launcher_round"
-			android:supportsRtl="true"
-			android:theme="@style/AppTheme"
-			tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme"
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
 
-		<activity android:name=".MainActivity">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN"/>
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-				<category android:name="android.intent.category.LAUNCHER"/>
-			</intent-filter>
-		</activity>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
-		<activity android:name=".sliding.SlidingActivity"/>
+        <activity android:name=".sliding.SlidingActivity" />
 
-		<activity android:name=".SwipeLayoutActivity"/>
+        <activity android:name=".SwipeLayoutActivity" />
 
-		<activity android:name=".FitWindowTestActivity"
-				  android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".slide.SlideBehaviourActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
 
-		<activity android:name=".appbar.AppBarActivity"
-				  android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".FitWindowTestActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
 
-		<activity android:name=".graph.GraphActivity"
-				  android:theme="@android:style/Theme.Material.Light"/>
+        <activity
+            android:name=".appbar.AppBarActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
 
-	</application>
+        <activity
+            android:name=".graph.GraphActivity"
+            android:theme="@android:style/Theme.Material.Light" />
+
+    </application>
 
 </manifest>
